# Qt-Widgets-Projects

./: .gitignore  README.md
ImageVIewer/: CMakeLists.txt  CMakeUserPresets.json  ImageVIewer.cpp  ImageVIewer.h  ImageVIewer.ui  main.cpp  resources.qrc
PaintApp/: PaintApp.cpp  PaintApp.h  PaintApp.sln  PaintApp.ui  PaintApp.vcxproj  PaintApp.vcxproj.filters  PaintCanvas.cpp  PaintCanvas.h  main.cpp
PhotoManager/: CMakeLists.txt  ImageInfoDialog.ui
PhotoManager/PhotoManager/: CMakeLists.txt  ImageInfoDialog.cpp  ImageInfoDialog.h  ImageInfoDialog.ui  PhotoManager.cpp  PhotoManager.h  PhotoManager.ui  main.cpp  resources.qrc
TCPChat/: TCPChat.sln  TCPChat.vcxproj
Text Editor/: Text Editor.sln  Text Editor.vcxproj  Text Editor.vcxproj.filters  TextEditor.cpp  TextEditor.h  TextEditor.ui  temp.txt
